sumo/tests/traci/variable_subscription/errors/UnknownVariable/errors.traci
Error: Answered with error to command 164: Get Vehicle Variable: unsupported variable specified
Error: Answered with error to command 212: Could not add subscription (Get Vehicle Variable: unsupported variable specified).
